--- a/笔记.md
+++ b/笔记.md
@@ -1,13 +1,50 @@
 ### Docker
-##### -v 将宿主机和docker容器的文件映射
-##### -p 宿主机端口:docker端口（可以实现单机器分布式部署）
-##### -e 环境变量
+##### -v 
+      将宿主机和docker容器的文件映射
+##### -p 
+      宿主机端口:docker端口（可以实现单机器分布式部署）
+##### -e 
+      环境变量
 ##### 私服
 
 ### Kubernetes(k8s)
 扩容
 
+### 项目部署
+##### Maven Exec插件源代码部署
+##### jar包自带tomcat容器 java -jar启动 简单可靠，但依赖jvm
+      externalized configuration 切换配置文件
 
-### Maven Exec插件源代码部署
-### jar包自带tomcat容器 java -jar启动 简单可靠，但依赖jvm
-externalized configuration 切换配置文件
+
+### 集合
+#### List
+      ArrayList：查找o(1)，更新是o(n)
+      LinkedList: 按照插入顺序排序，比较适合操作首位末位.查找o(n)，更新o(1)（需要先查找所以还是o(n)）
+#### Set
+      HashSet: 查找更新都是o(1)
+      LinkedHashSet: 双向链表+哈希表
+      TreeSet: 红黑树，查找更新都是log(n)。按照自然排序(compareable)排序
+#### Map
+      与上面set的类似。对TreeMap来讲，查询增删都是logn。HashMap(HashSet)的get、put都是o(1)
+### 操作系统
+#### 进程和线程
+      进程占有独立的内存和文件描述符，线程共享一个进程内的资源。
+      jvm中的线程对linux系统而言都相当于一个进程，由CPU进行调度。但会有上下文切换、占用资源多、不灵活等缺点。
+
+### 计算机网络
+##### TCP/IP
+      基石。
+      TCP稳定可靠，纠错/重新发送。
+      UDP快，质量低。视频聊天等在丢包率较低时可以接受。
+###### 三次握手、四次挥手
+###### 从浏览器按下回车到刷新网页，经历了什么？
+    1. 从/etc/hosts、dns获得ip地址
+    2. 计算机网卡发起tcp连接，端口号可以指定或者浏览器默认。
+    3. 发送http请求，开启双向数据通道
+
+### Web
+##### 状态码
+
+### 操作系统
+· 200
+· 201
