--- a/笔记.md
+++ b/笔记.md
@@ -14,6 +14,9 @@
 ##### Maven Exec插件源代码部署
 ##### jar包自带tomcat容器 java -jar启动 简单可靠，但依赖jvm
       externalized configuration 切换配置文件
+      
+### 面试题
+https://static.xiedaimala.com/xdml/file/1c446720-bd71-4922-9824-347ced27efea/2019-10-31-19-36-18.pdf
 
 
 ### 集合
@@ -45,6 +48,32 @@
 ### Web
 ##### 状态码
 
-### 操作系统
-· 200
-· 201
+* 200： OK
+请求成功。成功的含义取决于HTTP方法：
+      GET：资源已被提取并在消息正文中传输。
+      HEAD：实体标头位于消息正文中。
+      POST：描述动作结果的资源在消息体中传输。
+      TRACE：消息正文包含服务器收到的请求消息
+* 201 Created
+该请求已成功，并因此创建了一个新的资源。这通常是在POST请求，或是某些PUT请求之后返回的响应。
+* 301 Moved Permanently
+被请求的资源已永久移动到新位置，并且将来任何对此资源的引用都应该使用本响应返回的若干个 URI 之一。如果可能，拥有链接编辑功能的客户端应当自动把请求的地址修改为从服务器反馈回来的地址。除非额外指定，否则这个响应也是可缓存的。
+* 302 Found
+请求的资源现在临时从不同的 URI 响应请求。由于这样的重定向是临时的，客户端应当继续向原有地址发送以后的请求。只有在Cache-Control或Expires中进行了指定的情况下，这个响应才是可缓存的。
+* 403 Forbidden
+服务器已经理解请求，但是拒绝执行它。与 401 响应不同的是，身份验证并不能提供任何帮助，而且这个请求也不应该被重复提交。如果这不是一个 HEAD 请求，而且服务器希望能够讲清楚为何请求不能被执行，那么就应该在实体内描述拒绝的原因。当然服务器也可以返回一个 404 响应，假如它不希望让客户端获得任何信息。
+* 404 Not Found
+请求失败，请求所希望得到的资源未被在服务器上发现。没有信息能够告诉用户这个状况到底是暂时的还是永久的。假如服务器知道情况的话，应当使用410状态码来告知旧资源因为某些内部的配置机制问题，已经永久的不可用，而且没有任何可以跳转的地址。404这个状态码被广泛应用于当服务器不想揭示到底为何请求被拒绝或者没有其他适合的响应可用的情况下。
+* 502 Bad Gateway
+此错误响应表明服务器作为网关需要得到一个处理这个请求的响应，但是得到一个错误的响应。
+* 503 Service Unavailable
+服务器没有准备好处理请求。 常见原因是服务器因维护或重载而停机。 请注意，与此响应一起，应发送解释问题的用户友好页面。 这个响应应该用于临时条件和 Retry-After：如果可能的话，HTTP头应该包含恢复服务之前的估计时间。 网站管理员还必须注意与此响应一起发送的与缓存相关的标头，因为这些临时条件响应通常不应被缓存。
+* 504 Gateway Timeout
+当服务器作为网关，不能及时得到响应时返回此错误代码。
+
+##### 跨域
+      浏览器默认只能往当前域名发送请求，为了安全
+      解决:
+      * JSONP : 让js本身处于要跨的域中，即更换src标签
+      * COSR : 让要跨的域返回 allow:xxx.com
+      * NGINX : 反向代理
