--- a/笔记.md
+++ b/笔记.md
@@ -33,6 +33,8 @@ https://static.xiedaimala.com/xdml/file/1c446720-bd71-4922-9824-347ced27efea/201
 #### 进程和线程
       进程占有独立的内存和文件描述符，线程共享一个进程内的资源。
       jvm中的线程对linux系统而言都相当于一个进程，由CPU进行调度。但会有上下文切换、占用资源多、不灵活等缺点。
+      一个线程占用大概1m空间，比较昂贵。而且多线程会发生上下文切换，每个线程将自己等运行状态存放到寄存器中（唯一），运行时再取出来。
+      协程：用户态线程。一个线程运行，在其中开辟多个线程，每个线程维护自己的运行状态，go语言等支持，只占4kb。
 
 ### 计算机网络
 ##### TCP/IP
@@ -77,3 +79,14 @@ https://static.xiedaimala.com/xdml/file/1c446720-bd71-4922-9824-347ced27efea/201
       * JSONP : 让js本身处于要跨的域中，即更换src标签
       * COSR : 让要跨的域返回 allow:xxx.com
       * NGINX : 反向代理
+### 测试
+##### 自动化测试
+测试单个方法
+      junit4、5 ：新建一个jvm，扫描所有test下面的类，对每个@test方法，新建一个对象并执行该方法。
+      BeforeAll:在所有测试用例执行前执行一次，即测试要开始前初始化
+BeforeEach:在单个测试用例执行前执行一次，对每个对象而言。
+##### 单元测试
+测试单个类，将它的依赖mock出来。@Autowired注解在Field时，需要将mock的对象通过反射注入，而注解在构造器上时，
+直接通过构造器注入。
+##### 集成测试
+将所有环境部署好，也是自动化。通过注解将各种配置文件加载，数据库可以在mvn插件中docker启动，或者用db2，在程序中启。
